# PowerSnail.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  _last_modified.txt  config.toml  goat.js  index.html  index.md  index.xml  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  style.css
_data/: authors.yml  navigation.yml  services.yml  socialmedia.yml
_drafts/: 2016-02-14-inorder-tree-walk.md  2016-02-27-idea-driving-mode-on-ar-glasses.markdown  2017-01-06-666992.md  gallery.md  homework.markdown  new_draft.py  nov21.markdown  page_all_frontmatter.md  page_simple.md  page_with_image.md  page_with_table_of_contents.md  page_without_image.md  post_with_image.md  post_without_image.md  video.md
_includes/: _footer_scripts.html  _head.html  _meta_information.html  _navigation.html
_layouts/: frontpage.html
_sass/: _02_settings_typography.scss  _06_typography.scss
about/: index.html
archetypes/: post.md  status.md
assets/: Blogs.bib
cat_dot/: cat_dot.js.map  index.html  style.css
categories/: index.html  index.xml
content/: _index.md  about.md  cat_dot.html  game_of_life.html  stats.md  wonderful.md
css/: basic.css  christmas.css  style.css
files/: Bowing_Planes_Exercise.mscz
game_of_life/: game_of_life.js  game_of_life.js.map  game_of_life.ts  index.html  style.css
js/: bundle.39b4c9e45c7f60379025444391711d5dc496457cd3480b1edb45bf24649fd217.js  bundle.cc6d92b034817d3a3e6e3835b40e09bd99b88fcbe2b160a0dd4220b82b21c3cc.js
latex/: caramel-color.tex  chicken-abodo.tex
layouts/: 404.html  index.html
pages/: about.md  comsci.md  cv.md  reading.md  recipes.md  studies.md
posts/: index.html  index.xml
public/: 404.html  index.html  index.xml  site.webmanifest  sitemap.xml  style.css
sheet-music/: Bowing_Planes_Exercise.mscx  Chopin - Nocturne in C# Minor.mscx  (+2 more)
tool_scripts/: add_bibliography.py  add_date.py  add_slug.py  check_dead_links.py  custom_processing_server.py  extension_normalization.py  generate_responsive_images.py  image_scanner.py  make_theme.py  pdf_thumbnail.py  pyproject.toml  show_draft.sh  social_icon.py  watch.py
(+531 files in other folders)
