[project]
name = "powersnail-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "inotify>=0.2.10",
    "more-itertools>=10.5.0",
    "numpy>=2.1.2",
    "pillow>=11.0.0",
    "pygments>=2.18.0",
    "rich>=13.9.3",
    "selectolax>=0.3.25",
    "typer>=0.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
    "ty>=0.0.1a25",
]

