[tool.poetry]
name = "tool_scripts"
version = "0.1.0"
description = ""
authors = ["PowerSnail <hj@powersnail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
typer = "^0.6.1"
selectolax = "^0.3.8"
numpy = "^1.23.2"
colour = "^0.1.5"
PyMuPDF = "^1.20.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
